--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,9 @@ Title: Prediction of incidence using calibration model and proxy of incidence
 Version: 0.1
 Authors@R: c(person("Edouard", "Chatignoux", email = "edouard.chatignoux@santepubliquefrance.fr",
                   role = c("aut", "cre")),
-            person("Zoé", "Uhry", role = c("ctb")),
+            person("Zoe", "Uhry", role = c("ctb")),
 	    person("Laurent", "Remontet", role = c("ctb")))
-Author: Edouard Chatignoux [aut,cre], Zoé Uhry [aut, ctb], Laurent Remontet [aut, ctb], Marc Colonna [aut, ctb]
+Author: Edouard Chatignoux [aut,cre], Zoe Uhry [aut, ctb], Laurent Remontet [aut, ctb], Marc Colonna [aut, ctb]
 Maintainer: Edouard Chatignoux <edouard.chatignoux@santepubliquefrance.fr>
 Description: The package provides fonctions to predict incidence from proxy data using a calibration approach
 Depends:
@@ -19,9 +19,11 @@ Imports:
     splines,
     RColorBrewer,
     Matrix,
-    maptools
+    maptools,
+    methods
 Suggests:
     lme4,
     MASS,
-    splines
+    splines,
+    mgcv
 RoxygenNote: 6.0.1
